--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-  "name": "games-wabot",
-  "description": "Customizable WhatsApp Bot",
-  "repository": "https://github.com/BochilGaming/games-wabot",
-  "logo": "https://node-js-sample.herokuapp.com/node.png",
-  "keywords": ["bot", "whatsapp", "whatsapp-bot", "rpg", "games-wabot", "epic rpg"]
+  "name": "lolibot",
+  "description": "WhatsApp Bot echo en base a Nodejs",
+  "repository": "https://github.com/g4tito/lolibot",
+  "logo": "https://i.ibb.co/rksd9bC/gaty-2.jpg",
+  "keywords": ["nodejs", "bot", "whatsapp bot", "lolibot"]
 }
