--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "games-wabot",
-  "version": "0.9.8",
+  "name": "lolibot",
+  "version": "4.0.0",
   "description": "Customizable WhatsApp Bot",
   "depecrated": false,
   "main": "index.js",
@@ -8,10 +8,6 @@
     "lib": "lib",
     "src": "src",
     "plugins": "plugins"
-  },
-  "engines": {
-    "node": "14.x",
-    "npm": "6.x"
   },
   "scripts": {
     "start": "node index.js",
@@ -23,23 +19,23 @@
     "whatsapp",
     "js-whatsapp",
     "whatsapp",
-    "Games-wabot",
+    "lolibot",
     "wabot-aq"
   ],
-  "homepage": "https://github.com/BochilGaming/games-wabot",
+  "homepage": "https://github.com/BochilGaming/g4tito",
   "author": {
-    "name": "BochilGaming"
+    "name": "g4tito"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/BochilGaming/games-wabot.git"
+    "url": "git+https://github.com/g4tito/lolibot.git"
   },
   "bugs": {
-    "url": "https://github.com/BochilGaming/games-wabot/issues"
+    "url": "https://github.com/g4tito/lolibot/issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
-    "@adiwajshing/baileys": "github:BochilGaming/Baileys#fix",
+    "@adiwajshing/baileys": "^3.5.3",
     "@bochilteam/scraper": "^0.0.7",
     "awesome-phonenumber": "^2.65.0",
     "brainly-scraper-v2": "^1.1.2",
@@ -68,7 +64,7 @@
     "terminal-image": "^1.2.1",
     "translate-google-api": "^1.0.4",
     "url-regex-safe": "^2.1.0",
-    "xmldom": "github:xmldom/xmldom#0.7.0",
+    "xmldom": "^0.6.0",
     "warn": "^1.0.1",
     "yargs": "^16.2.0",
     "node-webpmux": "^2.0.3",
