--- a/package.json
+++ b/package.json
@@ -19,56 +19,75 @@
     "whatsapp",
     "js-whatsapp",
     "whatsapp",
-    "lolibot",
-    "wabot-aq"
+    "Games-wabot",
+    "wabot-aq",
+    "lolibot"
   ],
-  "homepage": "https://github.com/BochilGaming/g4tito",
+  "homepage": "https://github.com/BochilGaming/games-wabot",
   "author": {
-    "name": "g4tito"
+    "name": "BochilGaming"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/g4tito/lolibot.git"
+    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
   },
   "bugs": {
-    "url": "https://github.com/g4tito/lolibot/issues"
+    "url": "https://github.com/BochilGaming/games-wabot/issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
     "@adiwajshing/baileys": "^3.5.3",
-    "@bochilteam/scraper": "^0.0.7",
-    "awesome-phonenumber": "^2.65.0",
-    "brainly-scraper-v2": "^1.1.2",
+    "awesome-phonenumber": "^2.54.0",
+    "axios": "^0.21.1",
+    "brainly-scraper-v2": "^2.0.3",
+    "canvacord": "^5.2.3",
     "cfonts": "^2.9.3",
-    "chalk": "^4.1.0",
+    "chalk": "^4.1.1",
     "cheerio": "^1.0.0-rc.10",
-    "colors": "1.4.0",
     "dotenv": "10.0.0",
+    "emoji-api": "^1.0.2",
     "express": "^4.17.1",
-    "file-type": "^16.4.0",
+    "file-type": "^16.5.1",
     "fluent-ffmpeg": "^2.1.2",
-    "form-data": "^3.0.1",
+    "form-data": "^4.0.0",
+    "g-i-s": "^2.1.6",
     "google-it": "^1.6.2",
-    "jsdom": "^16.5.1",
+    "got": "^11.8.2",
+    "human-readable": "^0.2.1",
+    "image-to-base64": "^2.2.0",
+    "imgbb-uploader": "^1.3.3",
+    "img2braille": "^1.0.1",
+    "jsbarcode": "^3.11.4",
+    "jsdom": "^16.6.0",
+    "knights-canvas": "^1.2.7",
+    "lodash": "^4.17.21",
+    "lowdb": "^2.1.0",
+    "moment-timezone": "^0.5.33",
+    "mongoose": "^6.0.11",
+    "nekos.life": "^2.0.7",
     "node-fetch": "^2.6.1",
     "node-gtts": "^2.0.2",
-    "node-os-utils": "^1.3.5",
-    "human-readable": "^0.2.1",
+    "node-webpmux": "^3.1.0",
+    "nodemon": "^2.0.7",
     "package.json": "^2.0.1",
     "qrcode": "^1.4.4",
-    "similarity": "^1.2.1",
     "qrcode-terminal": "^0.12.0",
-    "imgbb-uploader": "^1.3.5",
-    "socket.io": "^4.0.1",
+    "ra-api": "^1.3.2",
+    "remove.bg": "^1.3.0",
+    "similarity": "^1.2.1",
+    "socket.io": "^4.1.3",
+    "spinnies": "^0.5.1",
+    "swiftcord": "^2.1.7",
     "syntax-error": "^1.4.0",
-    "terminal-image": "^1.2.1",
+    "terminal-image": "^2.0.0",
     "translate-google-api": "^1.0.4",
-    "url-regex-safe": "^2.1.0",
-    "xmldom": "^0.6.0",
+    "url-regex": "^5.0.0",
     "warn": "^1.0.1",
-    "yargs": "^16.2.0",
-    "node-webpmux": "^2.0.3",
-    "yt-search": "^2.7.6",
-    "g-i-s": "^2.1.6"
+    "wa-sticker-formatter": "^4.0.14",
+    "pet-pet-gif": "^1.0.9",
+    "node-tesseract-ocr": "^2.2.1",
+    "xmldom": "^0.6.0",
+    "yargs": "^17.0.1",
+    "yt-search": "^2.9.0"
   }
 }
